--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,27 +10,75 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+env:
+  Name : aframe-project
+  Project_Name : metaverse-363005
+  Cluster_name : aframe-cluster
+  Server_Name : aframe-server
+  Service_Name : aframe-service
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_deploy_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.RSA_KEY }} 
+      
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        
+      - name: Setting up GCloud
+        uses: google-github-actions/setup-gcloud@main
+        with:
+          version: '286.0.0'
+          service_account_key: ${{ secrets.GCP_KEY }}
+          service_account_email: ${{ secrets.SERVICE_EMAIL }}
+          project_id:  ${{ env.Project_Name }}
+          
+      - name: Copy files to remote vm
+        run: rsync -avz -e "ssh -p 22" ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_HOST }}/project/${{ env.Name }} --delete
+        #run:  gcloud compute scp --zone "us-central1-a" --recurse ./ ${{ secrets.SSH_USER }}@instance-1:/home/${{ secrets.SSH_USER }}/project/${{ env.Name } --project ${{ env.Project_Name }
+      
+      - name: Authenticate Docker
+        run: |-
+          gcloud auth configure-docker -q
+            
+      - name: Build Docker Image
+        run: |-
+          docker build -t aframe .
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Tag Docker Image
+        run: |-
+          docker tag aframe gcr.io/${{ env.Project_Name }}/aframe
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Push Docker Image
+        run: |-
+          docker push gcr.io/${{ env.Project_Name }}/aframe
+
+      - name: Deploy Docker Image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }} 
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.RSA_KEY }} 
+          port: 22
+          script: | 
+            gcloud container clusters create ${{ env.Cluster_name }}
+            gcloud container clusters get-credentials ${{ env.Cluster_name }}
+            kubectl delete deployment ${{ env.Server_Name }}
+            kubectl delete service ${{ env.Service_Name }} 
+            sleep 10
+            kubectl create deployment ${{ env.Server_Name }} --image=gcr.io/${{ env.Project_Name }}/aframe
+            kubectl expose deployment ${{ env.Server_Name }} --name=${{ env.Service_Name }} --type=LoadBalancer --port=80 --target-port=80
+            sleep 60
+            kubectl get services ${{ env.Service_Name }} | awk '{ print $4 }' | tail -1 > temp.txt
+            /home/metaverseops/testproject/code/webapp_test.py temp.txt
