--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ env:
 
 jobs:
   build_deploy_test:
+    name: Build, Deploy and Test Solipsisworld application
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
