--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
             kubectl delete service ${{ env.Service_Name }} 
             sleep 10
             kubectl create deployment ${{ env.Server_Name }} --image=gcr.io/${{ env.Project_Name }}/${{ env.Name }}
-            kubectl expose deployment ${{ env.Server_Name }} --name=${{ env.Service_Name }} --type=LoadBalancer --port=80 --target-port=80 --load-balancer-ip=${{ env.Project_Name }}
+            kubectl expose deployment ${{ env.Server_Name }} --name=${{ env.Service_Name }} --type=LoadBalancer --port=80 --target-port=80 --load-balancer-ip=${{ env.Ext_IP }}
             sleep 60
             kubectl get services ${{ env.Service_Name }} | awk '{ print $4 }' | tail -1 > temp.txt
             /home/${{ secrets.SSH_USER }}/testproject/code/webapp_test.py temp.txt
