--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Basic PWA Example",
     "short_name":"BasicPWA",
-    "start_url":"http://104.154.106.207/",
+    "start_url":"http://104.154.106.207:80",
     "background_color":"#fff",
     "theme_color":"#2d0",
     "ovr_package_name":"ovr.testing.aframe",
