--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ env:
   Server_Name : aframe-server
   Service_Name : aframe-service
   Ext_IP: 104.154.106.207
+  URL: https://aframe.endpoints.metaverse-363005.cloud.goog
 
 jobs:
   build_deploy_test:
@@ -63,7 +64,7 @@ jobs:
         run: |-
           docker push gcr.io/${{ env.Project_Name }}/${{ env.Name }}
 
-      - name: Deploy Docker Image
+      - name: Deploy Docker Image and expose as HTTPS
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }} 
@@ -71,14 +72,22 @@ jobs:
           key: ${{ secrets.RSA_KEY }} 
           port: 22
           script: | 
+            gcloud endpoints services deploy /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/openapi.yaml 2> /dev/null
             gcloud container clusters create ${{ env.Cluster_name }} 2> /dev/null
             gcloud container clusters get-credentials ${{ env.Cluster_name }}
-            kubectl delete deployment ${{ env.Server_Name }}
             kubectl delete service ${{ env.Service_Name }} 
+            kubectl delete deployment ${{ env.Server_Name }}
             sleep 10
+            helm install nginx-stable/nginx-ingress --set controller.service.loadBalancerIP="${{ env.Ext_IP }}",rbac.create=true --generate-name
             kubectl create deployment ${{ env.Server_Name }} --image=gcr.io/${{ env.Project_Name }}/${{ env.Name }}
-            kubectl expose deployment ${{ env.Server_Name }} --name=${{ env.Service_Name }} --type=LoadBalancer --port=80 --target-port=80 --load-balancer-ip=${{ env.Ext_IP }}
-            sleep 60
-            kubectl get services ${{ env.Service_Name }} | awk '{ print $4 }' | tail -1 > temp.txt
+            kubectl expose deployment ${{ env.Server_Name }} --name=${{ env.Service_Name }} --port=80 --target-port=80
+            sleep 20
+            kubectl apply -f ingress.yaml
+            chmod +x /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/cert-manager_install.sh && /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/cert-manager_install.sh
+            export EMAIL=${{ secrets.SERVICE_EMAIL }}
+            cat /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/letsencrypt-issuer.yaml | sed -e "s/email: ''/email: $EMAIL/g" | kubectl apply -f-
+            kubectl apply -f /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/ingress-tls.yaml
+            # kubectl get services ${{ env.Service_Name }} | awk '{ print $4 }' | tail -1 > temp.txt
             /home/${{ secrets.SSH_USER }}/testproject/code/webapp_test.py temp.txt
-            /usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "aframe.application" --long "AFrame Application" --short "AF" --url "$(< ~/temp.txt)" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
+            /usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "aframe.application" --long "AFrame Application" --short "AF" --url "${{ env.Name }}" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
+            #/usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "aframe.application" --long "AFrame Application" --short "AF" --url "$(< ~/temp.txt)" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
