--- a/ingress-tls.yaml
+++ b/ingress-tls.yaml
@@ -23,6 +23,6 @@ spec:
         pathType: Prefix
         backend:
             service:
-              name: aframe-srv
+              name: aframe-service
               port:
                 number: 80
