--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name":"Basic PWA Example",
-    "short_name":"BasicPWA",
-    "start_url":"http://104.154.106.207:80",
+    "name":"Aframe Application",
+    "short_name":"AFrame",
+    "start_url":"https://aframe.endpoints.metaverse-363005.cloud.goog/",
     "background_color":"#fff",
     "theme_color":"#2d0",
-    "ovr_package_name":"ovr.testing.aframe",
+    "ovr_package_name":"our.awesome.kube",
     "display":"standalone",
     "icons":[
         {
