--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ env:
   Service_Name : aframe-service
   Ext_IP: 104.154.106.207
   URL: https://aframe.endpoints.metaverse-363005.cloud.goog
+  pkgname: a.frame.application
 
 jobs:
   build_deploy_test:
@@ -87,5 +88,7 @@ jobs:
             export EMAIL=${{ secrets.SERVICE_EMAIL }}
             cat /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/letsencrypt-issuer.yaml | sed -e "s/email: ''/email: $EMAIL/g" | kubectl apply -f-
             kubectl apply -f /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/ingress-tls.yaml
-            /home/${{ secrets.SSH_USER }}/testproject/code/webapp_test.py temp.txt
-            /usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "a.frame.application" --long "AFrame Application" --short "AF" --url "${{ env.URL }}" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
+            /home/${{ secrets.SSH_USER }}/testproject/code/webapp_test.py ${{ env.URL }}
+            /usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "${{ env.pkgname }}" --long "AFrame Application" --short "AF" --url "${{ env.URL }}" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
+            /usr/bin/sshpass -f /home/${{ secrets.SSH_USER }}/project/winpass.txt ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WINDOWS_HOST }} 'wget ${{ env.URL }}/manifest.json && ovr-platform-util.exe create-pwa -o .\Documents\output.apk --android-sdk %androidsdk% --package-name ${{ env.pkgname }} --manifest-content-file manifest.json'
+            /usr/bin/sshpass -f /home/${{ secrets.SSH_USER }}/project/winpass.txt scp -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WINDOWS_HOST }}:Documents/output.apk /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/output.apk
