--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.RSA_KEY }} 
           port: 22
+          command_timeout: 30m
           script: | 
             gcloud config set compute/region ${{ env.Region }}
             gcloud config set compute/zone ${{ env.Zone }}
