--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -91,11 +91,10 @@ jobs:
             script: | 
               gcloud config set compute/region ${{ env.Region }}
               gcloud config set compute/zone ${{ env.Zone }}
+              gcloud container clusters delete ${{ env.Cluster_name }} 2> /dev/null
               gcloud endpoints services deploy /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/openapi.yaml 
               gcloud container clusters create ${{ env.Cluster_name }} --zone ${{ env.Zone }} 2> /dev/null
               gcloud container clusters get-credentials ${{ env.Cluster_name }}
-              kubectl delete service ${{ env.Service_Name }} 
-              kubectl delete deployment ${{ env.Server_Name }}
               sleep 10
               helm install nginx-stable/nginx-ingress --set controller.service.loadBalancerIP="${{ env.Ext_IP }}",rbac.create=true --generate-name
               kubectl create deployment ${{ env.Server_Name }} --image=gcr.io/${{ env.Project_Name }}/${{ env.Name }}
