--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -87,11 +87,11 @@ jobs:
             username: ${{ secrets.SSH_USER }}
             key: ${{ secrets.RSA_KEY }} 
             port: 22
-            command_timeout: 30m
+            command_timeout: 40m
             script: | 
               gcloud config set compute/region ${{ env.Region }}
               gcloud config set compute/zone ${{ env.Zone }}
-              gcloud container clusters delete ${{ env.Cluster_name }} 2> /dev/null
+              gcloud container clusters delete ${{ env.Cluster_name }} --zone ${{ env.Zone }} -q 2> /dev/null
               gcloud endpoints services deploy /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/openapi.yaml 
               gcloud container clusters create ${{ env.Cluster_name }} --zone ${{ env.Zone }} 2> /dev/null
               gcloud container clusters get-credentials ${{ env.Cluster_name }}
