--- a/certificate.yaml
+++ b/certificate.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: aframe-tls
+  name: af-tls
   namespace: default
 spec:
-  secretName: aframe-tls
+  secretName: af-tls
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
-  commonName: aframe.endpoints.metaverse-363005.cloud.goog
+  commonName: af.endpoints.metaverse-363005.cloud.goog
   dnsNames:
-  - aframe.endpoints.metaverse-363005.cloud.goog
+  - af.endpoints.metaverse-363005.cloud.goog
