--- a/ingress-tls.yaml
+++ b/ingress-tls.yaml
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - aframe.endpoints.metaverse-363005.cloud.goog
+    - af.endpoints.metaverse-363005.cloud.goog
     secretName: aframe-tls
   rules:
-  - host: aframe.endpoints.metaverse-363005.cloud.goog
+  - host: af.endpoints.metaverse-363005.cloud.goog
     http:
       paths:
       - path: /
