--- a/ingress.yaml
+++ b/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     type: endpoints-app
 spec:
   rules:
-  - host: aframe.endpoints.metaverse-363005.cloud.goog
+  - host: af.endpoints.metaverse-363005.cloud.goog
     http:
       paths:
       - path: /
