--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Aframe Application",
     "short_name":"AFrame",
-    "start_url":"https://aframe.endpoints.metaverse-363005.cloud.goog/",
+    "start_url":"https://af.endpoints.metaverse-363005.cloud.goog/",
     "background_color":"#fff",
     "theme_color":"#2d0",
     "ovr_package_name":"our.awesome.kube",
