--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name":"ADrame Application",
+    "name":"AFrame Application",
     "short_name":"AF",
     "start_url":"https://af.endpoints.metaverse-363005.cloud.goog",
     "background_color":"#fff",
