--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -1,5 +1,5 @@
 # This is a workflow to build, deploy and test A-Frame applications.
-name: VRspace Deployment Pipeline
+name: A-Frame Deployment Pipeline
 
 # Controls when the workflow will run
 on:
@@ -68,11 +68,11 @@ jobs:
 
         - name: Build Docker Image
           run: |-
-            docker build -t vrspace .
+            docker build -t ${{ env.Name }} .
             
         - name: Tag Docker Image
           run: |-
-            docker tag vrspace gcr.io/${{ env.Project_Name }}/${{ env.Name }}
+            docker tag ${{ env.Name }} gcr.io/${{ env.Project_Name }}/${{ env.Name }}
             
         - name: Push Docker Image
           run: |-
