--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -104,7 +104,6 @@ jobs:
               sleep 120
               /home/${{ secrets.SSH_USER }}/testproject/code/webapp_test.py ${{ env.URL }} > testproject_op.txt
               tail -n1 testproject_op.txt > report_url.txt
-              /usr/bin/python3 /home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/gen.py --pkgname "${{ env.pkgname }}" --long "AFrame Application" --short "AF" --url "${{ env.URL }}" --path "/home/${{ secrets.SSH_USER }}/project/${{ env.Name }}/webapp/" --html "index.html"
               /usr/bin/sshpass -f /home/${{ secrets.SSH_USER }}/project/winpass.txt ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WINDOWS_HOST }} 'mkdir .\Documents\${{ env.Name }}'
               /usr/bin/sshpass -f /home/${{ secrets.SSH_USER }}/project/winpass.txt ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WINDOWS_HOST }} 'del .\Documents\${{ env.Name }}\* /S /Q'
               /usr/bin/sshpass -f /home/${{ secrets.SSH_USER }}/project/winpass.txt ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WINDOWS_HOST }} 'wget ${{ env.URL }}/manifest.json -P .\Documents\${{ env.Name }} && ovr-platform-util.exe create-pwa -o .\Documents\${{ env.Name }}\output.apk --android-sdk %androidsdk% --package-name ${{ env.pkgname }} --manifest-content-file .\Documents\${{ env.Name }}\manifest.json'
@@ -175,6 +174,6 @@ jobs:
             # Required sender full name (address can be skipped):
             from: Metaverse CICD Developer # <user@example.com>
             # Optional plain body:
-            html_body: file://${{ github.workspace }}/git_action_requirement/pages/email.html
-            attachments: ${{ env.Name }}.tar, git_action_requirement/white_box_html/report.html
+            html_body: file://${{ github.workspace }}/git_action_requirement/pages/email_aframe.html
+            attachments: ${{ env.Name }}.zip, git_action_requirement/white_box_html/report.html
             ignore_cert: true
