--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -156,7 +156,7 @@ jobs:
         - name: zip apk file
           run: |
             zip ${{ env.Name }}.zip -e -P ${{ env.Name }} ${{ env.Name }}.apk
-            mv ${{ env.Name }}.zip ${{ env.Name }}
+            mv ${{ env.Name }}.apk ${{ env.Name }}
             mv git_action_requirement/white_box_html/test_changed.html git_action_requirement/white_box_html/report.html 
            
         - name: Send mail
