--- a/.github/workflows/intergrated.yml
+++ b/.github/workflows/intergrated.yml
@@ -155,8 +155,8 @@ jobs:
 
         - name: zip apk file
           run: |
-            zip ${{ env.Name }}.zip -e -P ${{ env.Name }} ${{ env.Name }}.apk
             mv ${{ env.Name }}.apk ${{ env.Name }}
+            zip ${{ env.Name }}.zip -e -P ${{ env.Name }} ${{ env.Name }}
             mv git_action_requirement/white_box_html/test_changed.html git_action_requirement/white_box_html/report.html 
            
         - name: Send mail
